--- a/client/src/App.css
+++ b/client/src/App.css
@@ -42,3 +42,10 @@ html {
   justify-content: center;
   align-items: center; */
 }
+.App {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
