card, create account added

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -48,4 +48,9 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+}
+.image {
+  object-fit: cover;
+  width: 100%;
 }
