product page added

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -43,8 +43,8 @@ html {
   align-items: center; */
 }
 .App {
-  width: 100vw;
-  height: 100vh;
+  /* width: 100vw;
+  height: 100vh; */
   display: flex;
   justify-content: center;
   align-items: center;
