--- a/client/src/App.css
+++ b/client/src/App.css
@@ -43,8 +43,16 @@ html {
   align-items: center; */
 }
 .App {
-  /* width: 100vw;
-  height: 100vh; */
+  width: 100vw;
+  height: 100vh;
+  background: linear-gradient(
+    240.32deg,
+    #5b1188 10.2%,
+    #2c185b 36.02%,
+    #081e3a 50.45%,
+    #051225 81.89%,
+    #040d1f 100.83%
+  );
   display: flex;
   justify-content: center;
   align-items: center;
