minor fixes and routes live navbar done

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,6 +38,8 @@ html {
     #051225 81.89%,
     #040d1f 100.83%
   );
+  transition: 0.5s ease;
+  scroll-behavior: smooth;
   /* display: flex;
   justify-content: center;
   align-items: center; */
@@ -45,6 +47,7 @@ html {
 .App {
   width: 100vw;
   height: auto;
+  min-height: 100vh; /*Change when necessary*/
   background: linear-gradient(
     240.32deg,
     #5b1188 10.2%,
