--- a/client/src/Components/Footer/Footer.module.css
+++ b/client/src/Components/Footer/Footer.module.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   width: 100vw;
   height: 70vh;
-  background-image: url(../../Assets/footer_img.png);
+  /* background-image: url(../../Assets/footer_img.png); */
   background-repeat: no-repeat;
   background-size: cover;
   padding: 10px;
@@ -15,7 +15,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  height: 40vh;
+  height: 45vh;
   border-radius: 20px;
   border: 1px solid;
   background-color: rgb(255, 255, 255, 0.1);
@@ -71,4 +71,13 @@
 .copyright_symbol {
   font-size: 2.5rem;
   margin-right: 20px;
+}
+.text {
+  color: #fff;
+}
+.footer_column_logo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
