--- a/client/src/Components/UI/Button/Button.module.css
+++ b/client/src/Components/UI/Button/Button.module.css
@@ -26,6 +26,7 @@
   );
   transition: color 250ms;
   cursor: pointer;
+  font-weight: 600;
 }
 
 .btn::after,
@@ -119,6 +120,8 @@
     0 100%
   );
   cursor: pointer;
+  font-weight: 600;
+  text-shadow: 0px 8px 10px #0000003d;
 }
 .fill::after,
 .fill::before {
