--- a/client/src/Components/Navbar/Navbar.module.css
+++ b/client/src/Components/Navbar/Navbar.module.css
@@ -37,3 +37,81 @@
   align-items: center;
   column-gap: 40px;
 }
+/* hamburger */
+.btn {
+  display: none;
+}
+.icon {
+  /* background-color: #9eeff5; */
+  background-color: transparent;
+
+  border: 0;
+  cursor: pointer;
+  padding: 0;
+  height: 30px;
+  width: 30px;
+}
+.icon:focus {
+  outline: 0;
+}
+.icon .line {
+  background-color: #af7ffe;
+  /* box-shadow: 4px 4px 0px #3f7fbf; */
+  height: 7px;
+  display: block;
+  margin: 10px 0px;
+  width: 40px;
+  border-radius: 20px;
+  transform: rotate(-505deg) translateY(-3.5px) translateX(-2.5px);
+
+  transition: transform 0.4s ease-in;
+}
+.icon .line2 {
+  width: 55px;
+  transform: rotate(490deg) translateY(17.5px);
+}
+.nav_links_container.active + .btn .icon .line1 {
+  transform: rotate(0deg) translateY(0px) translateX(0px);
+}
+.nav_links_container.active + .btn .icon .line2 {
+  transform: rotate(0deg) translateY(0px);
+  /* width: 40px; */
+}
+.nav_links_container.active {
+  display: none;
+}
+@media screen and (max-width: 1100px) {
+  .navbar {
+    height: auto;
+    padding-top: 0px;
+  }
+  .btn {
+    display: block;
+  }
+  .nav_links_container {
+    width: 100vw;
+    height: 90vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-top: 80px;
+    background: linear-gradient(
+      240.32deg,
+      #5b1188 10.2%,
+      #2c185b 36.02%,
+      #081e3a 50.45%,
+      #051225 81.89%,
+      #040d1f 100.83%
+    );
+    z-index: 222;
+  }
+  .nav_links {
+    flex-direction: column;
+  }
+  .link_container {
+    margin: 20px 40px;
+  }
+  .link {
+    font-size: 40px;
+  }
+}
