--- a/client/src/Components/Product/Product.module.css
+++ b/client/src/Components/Product/Product.module.css
@@ -64,3 +64,25 @@
   margin-bottom: 150px;
   flex-wrap: wrap;
 }
+@media screen and (max-width: 1100px) {
+  .product_page {
+    margin-top: 30px;
+  }
+  .product {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 10px;
+  }
+  .product_content {
+    margin-top: 40px;
+    margin-left: 0;
+    padding: 20px;
+  }
+  .similar_container {
+    align-items: center;
+  }
+  .similar_products {
+    gap: 30px;
+  }
+}
