--- a/client/src/Components/VerifyNft/VerifyNft.module.css
+++ b/client/src/Components/VerifyNft/VerifyNft.module.css
@@ -34,3 +34,12 @@
   display: flex;
   align-self: center;
 }
+@media screen and (max-width: 1100px) {
+  .verify_nft_section {
+    padding: 40px;
+    justify-content: center;
+  }
+  .hero_section {
+    display: none;
+  }
+}
