--- a/client/src/Components/Navbar/Navbar.module.css
+++ b/client/src/Components/Navbar/Navbar.module.css
@@ -27,6 +27,7 @@
   font-size: 1.5rem;
   text-decoration: none;
   transition: all 0.3s ease-in-out;
+  cursor: pointer;
 }
 .link:hover {
   color: #e4abff;
