--- a/client/src/Components/Retailer/CreateProduct/CreateProduct.module.css
+++ b/client/src/Components/Retailer/CreateProduct/CreateProduct.module.css
@@ -87,8 +87,8 @@
   border: 4px solid;
   border-image: linear-gradient(
     90deg,
-    #cc00ff 50%,
-    rgba(255, 255, 255, 0) 104.81%
+    #ffffff 50%,
+    rgba(255, 255, 255, 1) 104.81%
   );
   border-width: 4px;
 
@@ -101,4 +101,7 @@
   color: #e4abff;
   pointer-events: none;
   font-weight: 600;
+}
+.rounded {
+  border-radius: 20px;
 }
