--- a/client/src/Components/User/User.module.css
+++ b/client/src/Components/User/User.module.css
@@ -1,6 +1,6 @@
 .user_profile {
   width: 100vw;
-  height: 100vh;
+  height: auto;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
