--- a/client/src/Components/User/User.module.css
+++ b/client/src/Components/User/User.module.css
@@ -5,7 +5,7 @@
   justify-content: space-between;
   align-items: flex-start;
   margin-top: 50px;
-  padding-right: 70px;
+  /* padding-right: 70px; */
 }
 .nav_links_container {
   width: 100%;
@@ -48,4 +48,9 @@
 .icon {
   width: 30px;
   margin-left: 8px;
+}
+@media screen and (max-width: 1200px) {
+  .side_nav {
+    display: none;
+  }
 }
