--- a/client/src/Components/Retailer/MyItems/MyItems.module.css
+++ b/client/src/Components/Retailer/MyItems/MyItems.module.css
@@ -1,13 +1,16 @@
+.my_items {
+  margin: 0 40px;
+}
 .cards_container {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-items: center;
-	gap: 20px;
-	padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 20px 10px;
 }
 .text {
-	font-size: 2rem;
-	color: rgb(0, 183, 255);
-	margin: 20px 0;
+  font-size: 2rem;
+  color: rgb(0, 183, 255);
+  margin: 20px 0;
 }
