--- a/client/src/Components/User/ChangePass/ChangePass.module.css
+++ b/client/src/Components/User/ChangePass/ChangePass.module.css
@@ -1,3 +1,11 @@
+.pass_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding-right: 150px;
+}
 .outer_container {
   display: flex;
   justify-content: center;
