--- a/client/src/Components/User/Profile/Profile.module.css
+++ b/client/src/Components/User/Profile/Profile.module.css
@@ -1,3 +1,6 @@
+.profile_container {
+  padding-right: 400px;
+}
 .profile_card {
   width: 100%;
   height: 100%;
@@ -5,6 +8,7 @@
   justify-content: space-between;
   align-items: center;
   /* padding: 30px; */
+  padding-right: 200px;
 }
 .profile_pic {
   width: 70%;
