--- a/client/src/Components/Navbar/Dropdown.module.css
+++ b/client/src/Components/Navbar/Dropdown.module.css
@@ -1,10 +1,12 @@
 .dropdown_menu {
   background: red;
   width: 200px;
+  height: auto;
   position: absolute;
   top: 80px;
   list-style: none;
   text-align: start;
+  z-index: 2;
 }
 
 .dropdown_menu li {
