--- a/client/src/Components/User/Profile/Profile.module.css
+++ b/client/src/Components/User/Profile/Profile.module.css
@@ -1,6 +1,5 @@
-.profile_container {
-  padding-right: 40px;
-  margin-left: 50px;
+.profile {
+  margin: 30px;
 }
 .profile_card {
   width: 100%;
@@ -8,14 +7,20 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* padding: 30px; */
-  /* padding-right: 200px; */
   padding: 30px;
+  /* margin: 20px; */
 }
-
 .profile_pic {
-  width: 70%;
+  width: auto;
 }
 .inputs {
-  width: 70%;
+  width: auto;
+}
+@media screen and (max-width: 1000px) {
+  .profile_card {
+    flex-direction: column;
+  }
+  .image {
+    width: 200px;
+  }
 }
